--- a/index.html
+++ b/index.html
@@ -54,42 +54,44 @@
       </div>
     </div>
 
-      <div style="
-      background:
-      linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-      linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-      linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-      linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-      linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-      linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
-      background-color: #131313;
-      background-size: 20px 20px;
-      width: 100vw;", class="img_relative labtop", id="resume_pdf">
-        <img src="images/plant.png" class="img_absolute img_plant">
-        <img src="images/labtop.png" class="img_absolute img_labtop">
-        <div class="container_nut">
-          <div class="container-fluid nut">
-            <div class="imac displaynone">
-              <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
+    <div style="
+    background:
+    linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+    linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+    background-color: #131313;
+    background-size: 20px 20px;
+    width: 100vw;", class="img_relative labtop", id="resume_pdf">
+      <img src="images/plant.png" class="img_absolute img_plant">
+      <img src="images/labtop.png" class="img_absolute img_labtop">
+      <div class="container_nut">
+        <div class="container-fluid nut">
+          <div class="imac displaynone">
+            <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
+            <!-- <hr class="white_break"> -->
+            <p class="i_believe">I believe websites should inspire people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
+
+          </div>
+          <div class="row nut">
+            <div class="col-md-10 ipad displaynone">
+              <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p><br>
               <!-- <hr class="white_break"> -->
-              <p class="i_believe">I believe websites should inspire people's lives. <br class="imac displaynone"> <span class="italic">Are we on the same page?</span> </p>
+              <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
             </div>
-            <div class="row nut">
-              <div class="col-md-10 ipad displaynone">
-                <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p><br>
-                <!-- <hr class="white_break"> -->
-                <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
-              </div>
-
-              <div class="col-md-12" id="labtopresumewidth">
-                <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" title="Download PDF" class="resume_pdf"></a>
-              </div>
+            <div class="col-md-12" id="labtopresumewidth">
+              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" title="Download PDF" class="resume_pdf"></a>
             </div>
           </div>
         </div>
       </div>
+    </div>
+
+
 
 <!-- <div style="background-image: url(images/wood.png); width: 100vw; height: 50vh", class="img_relative carouselgradient"> -->
 
@@ -152,6 +154,23 @@
   </div>
 
 </div>
+
+<!-- rendez you -->
+  <div style="
+  background:
+  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
+  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
+  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
+  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
+  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
+  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
+  background-color: #131313;
+  background-size: 20px 20px;
+  width: 100vw;", class="img_relative labtop", id="resume_pdf">
+
+  </div>
+
+
 
 <!-- <div class="carolcarolcon"> -->
 <div class="container_carousel" id="carousel">
