--- a/index.html
+++ b/index.html
@@ -157,16 +157,20 @@
 
 <!-- rendez you -->
   <div style="
+
   background:
-  linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-  linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-  linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-  linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-  linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-  linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
-  background-color: #131313;
-  background-size: 20px 20px;
+
+  radial-gradient(black 15%, transparent 16%) 0 0,
+  radial-gradient(black 15%, transparent 16%) 8px 8px,
+  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+  background-color:#2d1c17;
+  background-size:16px 16px;
   width: 100vw;", class="img_relative labtop", id="resume_pdf">
+
+    <div class="container_two rendez">
+      <div class="staytuned">Coming Soon... Stay Tuned!</div>      
+    </div>
 
   </div>
 
@@ -190,120 +194,42 @@
         <div class="carousel-inner">
           <div class="item active" data-interval="1000">
             <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- First Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
+
           <div class="item">
             <img alt="Carousel Bootstrap Second" src="images/EDWIN AU - Portfolio - 02 - Mickey 100.jpg" class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Second Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
+
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
           <div class="item">
             <img alt="Carousel Third" src="images/EDWIN AU - Portfolio - 04 - National.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 04 - Nobis Layout.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 07 - Disney Product.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 08 - Disney Alice.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
           <div class="item">
             <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 10 - Mred Mens.jpg", class="portfolio_images">
-            <div class="carousel-caption">
-              <h4>
-                <!-- Third Thumbnail label -->
-              </h4>
-              <p>
-                <!-- Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit. -->
-              </p>
-            </div>
           </div>
 
 
