rendez you page

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/nut.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/quote.css" type="text/css" rel="stylesheet">
+    <link href="stylesheet/app.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/carousel.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop.css" type="text/css" rel="stylesheet">
@@ -159,17 +160,44 @@
   <div style="
 
   background:
+    radial-gradient(black 15%, transparent 16%) 0 0,
+    radial-gradient(black 15%, transparent 16%) 8px 8px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
+    radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
+    background-color:#2d1c17;
+    background-size:16px 16px;
 
-  radial-gradient(black 15%, transparent 16%) 0 0,
-  radial-gradient(black 15%, transparent 16%) 8px 8px,
-  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
-  radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-  background-color:#2d1c17;
-  background-size:16px 16px;
-  width: 100vw;", class="img_relative labtop", id="resume_pdf">
+  width: 100vw; height 100vh", class="img_relative rendez", id="resume_pdf">
 
     <div class="container_two rendez">
-      <div class="staytuned">Coming Soon... Stay Tuned!</div>      
+      <div class="rendezlogo">RendezYOU</div>
+
+      <div class="row rendez" id="cycler">
+        <div class="col-md-6 img">
+          <img src="images/Rendez 1.png" class="img_rendez active" alt="My image" />
+          <img src="images/Rendez 2.png" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 3.png" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 4.png" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 5.png" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 6.png" class="img_rendez" alt="My image" />
+        </div>
+        <div class="col-md-6 rendezdes">
+          <div class="rendezverbage"><span class="yellow">Built with:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.<br><br>
+          <span class="italics">RendezYou</span> seeks to enrich the traveller's experience by connecting them to 'out of the box' tours given by locals.  The premise is for the users, by the users.  Each user is able to explore assorted tours or create a tour of their own.  Options are only limited to your imagination! <span class="italics">RendezYou</span> is fully responsive for desktops, tablets and mobile devices.<br><br>
+          <span class="italics">RendezYou</span>was developed with two other web developers as a final project at BitMaker Labs.</div>
+          <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake take_me_there">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
+
+          </h2>
+
+        </div>
+      </div>
+
+      </div>
+
+
+
+
+
     </div>
 
   </div>
