rendez you page

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
           <div class="rendezverbage"><span class="yellow">Built with:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.<br><br>
           <span class="italics">RendezYou</span> seeks to enrich the traveller's experience by connecting them to 'out of the box' tours given by locals.  The premise is for the users, by the users.  Each user is able to explore assorted tours or create a tour of their own.  Options are only limited to your imagination! <span class="italics">RendezYou</span> is fully responsive for desktops, tablets and mobile devices.<br><br>
           <span class="italics">RendezYou</span>was developed with two other web developers as a final project at BitMaker Labs.</div>
-          <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake take_me_there">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
+          <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake" id="take_me_there">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
 
           </h2>
 
