--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   width: 100vw; height 100vh", class="img_relative rendez", id="resume_pdf">
 
     <div class="container_two rendez">
-      <div class="rendezlogo">RendezYOU</div>
+      <div class="rendezlogo" id="rendezlogo">RendezYOU</div>
 
       <div class="row rendez" id="cycler">
         <div class="col-md-6 img">
