correct rendez scroll

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
-          <h2 class="right button-row"><a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou"></a></h2>
+          <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2>
           <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
         </div>
       </div>
@@ -167,10 +167,10 @@
     background-color:#2d1c17;
     background-size:16px 16px;
 
-  width: 100vw; height 100vh", class="img_relative rendez", id="resume_pdf">
+  width: 100vw; height 100vh", class="img_relative rendez", id="rendezlogo">
 
     <div class="container_two rendez">
-      <div class="rendezlogo" id="rendezlogo">RendezYOU</div>
+      <div class="rendezlogo">RendezYOU</div>
 
       <div class="row rendez" id="cycler">
         <div class="col-md-6 img">
