--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
-          <h2 class="right button-row"><a href="#rendezlogo" target="" title="RendezYou"></a></h2>
+          <h2 class="right button-row"><a href="#rendezlogo" title="RendezYou"></a></h2>
           <h2 class="right_right button-row"><a href="#contactme" title="CONTACT"></a></h2>
         </div>
       </div>
@@ -164,10 +164,9 @@
     radial-gradient(black 15%, transparent 16%) 8px 8px,
     radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 0 1px,
     radial-gradient(rgba(255,255,255,.1) 15%, transparent 20%) 8px 9px;
-    background-color:#2d1c17;
+    background-color: #2d1c17;
     background-size:16px 16px;
-
-  width: 100vw; height 100vh", class="img_relative rendez", id="rendezlogo">
+    width: 100vw; height 100vh", class="img_relative rendez", id="rendezlogo">
 
     <div class="container_two rendez">
       <div class="rendezlogo">RendezYOU</div>
@@ -184,24 +183,15 @@
         <div class="col-md-6 rendezdes">
           <div class="rendezverbage"><span class="yellow">Built with:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.<br><br>
           <span class="italics">RendezYou</span> seeks to enrich the traveller's experience by connecting them to 'out of the box' tours given by locals.  The premise is for the users, by the users.  Each user is able to explore assorted tours or create a tour of their own.  Options are only limited to your imagination! <span class="italics">RendezYou</span> is fully responsive for desktops, tablets and mobile devices.<br><br>
-          <span class="italics">RendezYou</span>was developed with two other web developers as a final project at BitMaker Labs.</div>
+          <span class="italics">RendezYou</span>was developed with two other web developers as a final project at BitMaker Labs.
+          </div>
           <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake" id="take_me_there">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
-
-          </h2>
-
         </div>
       </div>
-
-      </div>
-
-
-
-
 
     </div>
 
   </div>
-
 
 
 <!-- <div class="carolcarolcon"> -->
