rendez respponse lover button

--- a/index.html
+++ b/index.html
@@ -172,6 +172,12 @@
       <div class="rendezlogo">RendezYOU</div>
 
       <div class="row rendez" id="cycler">
+
+        <div class="rendezverbage imac displaynone"><span class="yellow">Built with:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.<br><br>
+        <span class="italics">RendezYou</span> seeks to enrich the traveller's experience by connecting them to 'out of the box' tours given by locals.  The premise is for the users, by the users.  Each user is able to explore assorted tours or create a tour of their own.  Options are only limited to your imagination! <span class="italics">RendezYou</span> is fully responsive for desktops, tablets and mobile devices.<br><br>
+        <span class="italics">RendezYou</span>was developed with two other web developers as a final project at BitMaker Labs.
+        </div>
+
         <div class="col-md-6 img">
           <img src="images/Rendez 1.png" class="img_rendez active" alt="My image" />
           <img src="images/Rendez 2.png" class="img_rendez" alt="My image" />
@@ -180,7 +186,11 @@
           <img src="images/Rendez 5.png" class="img_rendez" alt="My image" />
           <img src="images/Rendez 6.png" class="img_rendez" alt="My image" />
         </div>
-        <div class="col-md-6 rendezdes">
+        <br class="imac displaynone"><br class="imac displaynone">
+
+        <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake imac displaynone" id="take_me_there_iphone">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
+
+        <div class="col-md-6 rendezdes ipad displaynone">
           <div class="rendezverbage"><span class="yellow">Built with:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.<br><br>
           <span class="italics">RendezYou</span> seeks to enrich the traveller's experience by connecting them to 'out of the box' tours given by locals.  The premise is for the users, by the users.  Each user is able to explore assorted tours or create a tour of their own.  Options are only limited to your imagination! <span class="italics">RendezYou</span> is fully responsive for desktops, tablets and mobile devices.<br><br>
           <span class="italics">RendezYou</span>was developed with two other web developers as a final project at BitMaker Labs.
