new grey rendez

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     background-size:16px 16px;
     width: 100vw; height 100vh; class="img_relative rendez", id="rendezlogo"> -->
 
-    <div style="background: radial-gradient(white,grey); width: 100vw; height 100vh;" class="img_relative rendez", id="rendezlogo">
+    <div style="background: radial-gradient(circle at center, white 0, silver, grey 100%); width: 100vw; height 100vh;" class="img_relative rendez", id="rendezlogo">
 
     <div class="container_two rendez">
       <div class="rendezlogo">RendezYOU</div>
