--- a/index.html
+++ b/index.html
@@ -175,9 +175,10 @@
 
       <div class="row rendez" id="cycler">
 
-        <div class="rendezverbage imac displaynone"><span class="yellow">Built with:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.<br><br>
-        <span class="italics">RendezYou</span> seeks to enrich the traveller's experience by connecting them to 'out of the box' tours given by locals.  The premise is for the users, by the users.  Each user is able to explore assorted tours or create a tour of their own.  Options are only limited to your imagination! <span class="italics">RendezYou</span> is fully responsive for desktops, tablets and mobile devices.<br><br>
-        <span class="italics">RendezYou</span>was developed with two other web developers as a final project at BitMaker Labs.
+        <div class="rendezverbage imac displaynone">
+          <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours.  <span class="italics"><br><br>
+          <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
+          <span class="yellow">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
         </div>
 
         <div class="col-md-6 img">
@@ -193,9 +194,10 @@
         <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake imac displaynone" id="take_me_there_iphone">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
 
         <div class="col-md-6 rendezdes ipad displaynone">
-          <div class="rendezverbage"><span class="yellow">Built with:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.<br><br>
-          <span class="italics">RendezYou</span> seeks to enrich the traveller's experience by connecting them to 'out of the box' tours given by locals.  The premise is for the users, by the users.  Each user is able to explore assorted tours or create a tour of their own.  Options are only limited to your imagination! <span class="italics">RendezYou</span> is fully responsive for desktops, tablets and mobile devices.<br><br>
-          <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.
+          <div class="rendezverbage">
+            <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours.  <span class="italics"><br><br>
+            <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
+            <span class="yellow">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
           </div>
           <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake" id="take_me_there">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
         </div>
