--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     background-size:16px 16px;
     width: 100vw; height 100vh; class="img_relative rendez", id="rendezlogo"> -->
 
-    <div style="background: radial-gradient(circle at center, grey 0, darkgrey, dimgrey 100%); width: 100vw; height 100vh;" class="img_relative rendez", id="rendezlogo">
+    <div style="background: radial-gradient(circle at center, white 0, white, gainsboro 100%); width: 100vw; height 100vh;" class="img_relative rendez", id="rendezlogo">
 
     <div class="container_two rendez">
       <div class="rendezlogo">RendezYOU</div>
@@ -176,9 +176,9 @@
       <div class="row rendez" id="cycler">
 
         <div class="rendezverbage imac displaynone">
-          <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours.  <span class="italics"><br><br>
+          <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours.  <br><br>
           <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
-          <span class="yellow">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
+          <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
         </div>
 
         <div class="col-md-6 img">
@@ -195,9 +195,9 @@
 
         <div class="col-md-6 rendezdes ipad displaynone">
           <div class="rendezverbage">
-            <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours.  <span class="italics"><br><br>
+            <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours. <br><br>
             <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
-            <span class="yellow">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
+            <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
           </div>
           <a href="https://rendezyou.herokuapp.com/" target="_blank" title="RendezYou" class="rendeztake" id="take_me_there">Take me there!  <i class="fa fa-mail-forward fontawesomepadding"> </i></a>
         </div>
