--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
     background-size:16px 16px;
     width: 100vw; height 100vh; class="img_relative rendez", id="rendezlogo"> -->
 
-    <div style="background: radial-gradient(circle at center, white 0, white, gainsboro 100%); width: 100vw; height 100vh;" class="img_relative rendez", id="rendezlogo">
+    <div style="background: radial-gradient(circle at center, gainsboro 0, lightgrey, grey 100%); width: 100vw; height 100vh;" class="img_relative rendez", id="rendezlogo">
+
+    <!-- <div style="background-image: url(images/wood.jpg); width: 100vw; height: 100vh", class="img_relative carouselgradient"> -->
 
     <div class="container_two rendez">
       <div class="rendezlogo">RendezYOU</div>
