--- a/index.html
+++ b/index.html
@@ -267,11 +267,11 @@
           </div>
 
 
-          <!-- <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 12 - Disney Belle.jpg", class="portfolio_images">
+          <div class="item">
+            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - starwars.jpg", class="portfolio_images">
             <div class="carousel-caption">
             </div>
-          </div> -->
+          </div>
 
         </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
       </div>
