rendezyou photos added signin frame

--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
           <img src="images/Rendez 4.png" class="img_rendez" alt="My image" />
           <img src="images/Rendez 5.png" class="img_rendez" alt="My image" />
           <img src="images/Rendez 6.png" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 7.png" class="img_rendez" alt="My image" />
+
         </div>
         <br class="imac displaynone"><br class="imac displaynone">
 
