crop pics in rendez you section

--- a/index.html
+++ b/index.html
@@ -178,9 +178,9 @@
       <div class="row rendez" id="cycler">
 
         <div class="rendezverbage imac displaynone">
-          <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours.  <br><br>
+          <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users log on with the freedom to create tours as a <span class=italics>TOURGUIDE</span>; or kick back as a <span class=italics>TOURIST</span> and browse through our database of tours - created by users, for the users.<br><br>
           <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
-          <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
+          <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, SQL, AJAX, Google Maps.
         </div>
 
         <div class="col-md-6 img">
@@ -191,6 +191,8 @@
           <img src="images/Rendez 5.png" class="img_rendez" alt="My image" />
           <img src="images/Rendez 6.png" class="img_rendez" alt="My image" />
           <img src="images/Rendez 7.png" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 8.png" class="img_rendez" alt="My image" />
+
 
         </div>
         <br class="imac displaynone"><br class="imac displaynone">
@@ -199,7 +201,7 @@
 
         <div class="col-md-6 rendezdes ipad displaynone">
           <div class="rendezverbage">
-            <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users can log on and decide whether they want to be a <span class=italics>TOURGUIDE</span> or a <span class=italics>TOURIST</span>. As a <span class=italics>TOURGUIDE</span>, you can create tours for other users to join.  Or simply kick back as a <span class=italics>TOURIST</span> and browse through our database of tours. <br><br>
+            <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users log on with the freedom to create tours as a <span class=italics>TOURGUIDE</span>; or kick back as a <span class=italics>TOURIST</span> and browse through our database of tours - created by users, for the users.<br><br>
             <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
             <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
           </div>
