--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>edwinau.com</title>
     <link href="stylesheet/bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js'></script>
-    <script src='stylesheet/somejs.js'></script>
-
     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Oswald|Lato|Raleway|Cabin+Sketch|Pacifico" rel="stylesheet">
     <link href="stylesheet/reset.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/marbWhite.css" type="text/css" rel="stylesheet">
@@ -21,6 +17,7 @@
 
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
+    <title>edwinau.com</title>
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
@@ -219,71 +216,71 @@
 <!-- <div class="carolcarolcon"> -->
 <div class="container_carousel" id="carousel">
 
-<div class="container-fluid ninetywidth">
-  <div class="row carousel">
-    <div class="col-md-12 nopadding">
-      <div class="carousel slide" id="carousel-768363">
-        <ol class="carousel-indicators">
-          <!-- <li class="active" data-slide-to="0" data-target="#carousel-768363">
-          </li>
-          <li data-slide-to="1" data-target="#carousel-768363">
-          </li>
-          <li data-slide-to="2" data-target="#carousel-768363">
-          </li> -->
-        </ol>
-        <div class="carousel-inner">
-          <div class="item active" data-interval="1000">
-            <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Second" src="images/EDWIN AU - Portfolio - 02 - Mickey 100.jpg" class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Third" src="images/EDWIN AU - Portfolio - 04 - National.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 04 - Nobis Layout.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 07 - Disney Product.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 08 - Disney Alice.jpg", class="portfolio_images">
-          </div>
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 10 - Mred Mens.jpg", class="portfolio_images">
-          </div>
-
-
-          <div class="item">
-            <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - starwars.jpg", class="portfolio_images">
-            <div class="carousel-caption">
+  <div class="container-fluid ninetywidth">
+    <!-- <div class="row carousel"> -->
+      <div class="col-md-12 nopadding">
+        <div class="carousel slide" id="carousel-768363">
+          <ol class="carousel-indicators">
+            <!-- <li class="active" data-slide-to="0" data-target="#carousel-768363">
+            </li>
+            <li data-slide-to="1" data-target="#carousel-768363">
+            </li>
+            <li data-slide-to="2" data-target="#carousel-768363">
+            </li> -->
+          </ol>
+          <div class="carousel-inner">
+            <div class="item active" data-interval="1000">
+              <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg", class="portfolio_images">
             </div>
-          </div>
 
-        </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+            <div class="item">
+              <img alt="Carousel Bootstrap Second" src="images/EDWIN AU - Portfolio - 02 - Mickey 100.jpg" class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg", class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Third" src="images/EDWIN AU - Portfolio - 04 - National.jpg", class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 04 - Nobis Layout.jpg", class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg", class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg", class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 07 - Disney Product.jpg", class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 08 - Disney Alice.jpg", class="portfolio_images">
+            </div>
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 10 - Mred Mens.jpg", class="portfolio_images">
+            </div>
+
+
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - starwars.jpg", class="portfolio_images">
+              <div class="carousel-caption">
+              </div>
+            </div>
+
+          </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+        </div>
       </div>
-    </div>
+    <!-- </div class="row carousel"> -->
   </div>
-</div>
 
 </div>
 <!-- </div> -->
@@ -312,7 +309,9 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js'></script>
 <script src="stylesheet/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
+<script src='stylesheet/somejs.js'></script>
 
   </body>
 
