--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
               </div>
             </div>
 
+            <div class="item">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - Clarkes-01.jpg", class="portfolio_images">
+              <div class="carousel-caption">
+              </div>
+            </div>
+
           </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
         </div>
       </div>
