reducing all images file size

--- a/index.html
+++ b/index.html
@@ -185,14 +185,14 @@
         </div>
 
         <div class="col-md-6 img">
-          <img src="images/Rendez 1.png" class="img_rendez active" alt="My image" />
-          <img src="images/Rendez 2.png" class="img_rendez" alt="My image" />
-          <img src="images/Rendez 3.png" class="img_rendez" alt="My image" />
-          <img src="images/Rendez 4.png" class="img_rendez" alt="My image" />
-          <img src="images/Rendez 5.png" class="img_rendez" alt="My image" />
-          <img src="images/Rendez 6.png" class="img_rendez" alt="My image" />
-          <img src="images/Rendez 7.png" class="img_rendez" alt="My image" />
-          <img src="images/Rendez 8.png" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 1.jpg" class="img_rendez active" alt="My image" />
+          <img src="images/Rendez 2.jpg" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 3.jpg" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 4.jpg" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 5.jpg" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 6.jpg" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 7.jpg" class="img_rendez" alt="My image" />
+          <img src="images/Rendez 8.jpg" class="img_rendez" alt="My image" />
 
 
         </div>
@@ -273,7 +273,7 @@
 
 
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - starwars.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14- starwars.jpg", class="portfolio_images">
               <div class="carousel-caption">
               </div>
             </div>
