--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-</html>
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,7 @@
     <link href="stylesheet/contact.css" type="text/css" rel="stylesheet">
     <link href="stylesheet/media_labtop.css" type="text/css" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js'></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
     <link href="stylesheet/font-awesome.min.css" rel="stylesheet" >
     <title>edwinau.com</title>
@@ -33,19 +33,19 @@
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     width: 100vw; height: 100vh" class="container_one intro" id="backtotop">
-      <img src="images/introcloud1.png" class="img_introcloud1">
-      <img src="images/introcloud2.png" class="img_introcloud2">
-      <img src="images/introcloud3.png" class="img_introcloud3">
+      <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
+      <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
+      <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
 
 
       <!-- <img src="images/introcloud1.png" class="img_introcloud1"> -->
-      <img src="images/intrograss.png" class="img_intrograss" id="intrograss">
+      <img src="images/intrograss.png" class="img_intrograss" id="intrograss" alt="grass">
 
 
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
         <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN<br class="imac displaynone"> AU</a></h1><br>
-        <hr size=5px color=white class="ipad displaynone">
+        <hr size="5px" color="white" class="ipad displaynone">
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
@@ -55,19 +55,9 @@
       </div>
     </div>
 
-    <div style="
-    background:
-    linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px,
-    linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px,
-    linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px,
-    linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px,
-    linear-gradient(90deg, #1b1b1b 10px, transparent 10px),
-    linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424);
-    background-color: #131313;
-    background-size: 20px 20px;
-    width: 100vw;", class="img_relative labtop", id="resume_pdf">
-      <img src="images/plant.png" class="img_absolute img_plant">
-      <img src="images/labtop.png" class="img_absolute img_labtop">
+    <div style="background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;" class="img_relative labtop" id="resume_pdf">
+      <img src="images/plant.png" class="img_absolute img_plant" alt="plant">
+      <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
       <div class="container_nut">
         <div class="container-fluid nut">
           <div class="imac displaynone">
@@ -85,7 +75,7 @@
             </div>
 
             <div class="col-md-12" id="labtopresumewidth">
-              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" title="Download PDF" class="resume_pdf"></a>
+              <a href="EDWIN AU.pdf" target="_blank"><img src="images/EDWIN AU.jpg" alt="resume" title="Download PDF" class="resume_pdf"></a>
             </div>
           </div>
         </div>
@@ -168,7 +158,7 @@
     background-size:16px 16px;
     width: 100vw; height 100vh; class="img_relative rendez", id="rendezlogo"> -->
 
-    <div style="background: radial-gradient(circle at center, gainsboro 0, lightgrey, grey 100%); width: 100vw; height 100vh;" class="img_relative rendez", id="rendezlogo">
+    <div style="background: radial-gradient(circle at center, gainsboro 0, lightgrey, grey 100%); width: 100vw; height 100vh;" class="img_relative rendez" id="rendezlogo">
 
     <!-- <div style="background-image: url(images/wood.jpg); width: 100vw; height: 100vh", class="img_relative carouselgradient"> -->
 
@@ -178,7 +168,7 @@
       <div class="row rendez" id="cycler">
 
         <div class="rendezverbage imac displaynone">
-          <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users log on with the freedom to create tours as a <span class=italics>TOURGUIDE</span>; or kick back as a <span class=italics>TOURIST</span> and browse through our database of tours - created by users, for the users.<br><br>
+          <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users log on with the freedom to create tours as a <span class="italics">TOURGUIDE</span>; or kick back as a <span class="italics">TOURIST</span> and browse through our database of tours - created by users, for the users.<br><br>
           <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
           <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, SQL, AJAX, Google Maps.
         </div>
@@ -201,7 +191,7 @@
 
         <div class="col-md-6 rendezdes ipad displaynone">
           <div class="rendezverbage">
-            <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users log on with the freedom to create tours as a <span class=italics>TOURGUIDE</span>; or kick back as a <span class=italics>TOURIST</span> and browse through our database of tours - created by users, for the users.<br><br>
+            <span class="italics">RendezYou</span> is a web app that tucks itself neatly in the travel and tourism sector, connecting travellers with 'out of the box' tours given by locals. Users log on with the freedom to create tours as a <span class="italics">TOURGUIDE</span>; or kick back as a <span class="italics">TOURIST</span> and browse through our database of tours - created by users, for the users.<br><br>
             <span class="italics">RendezYou</span> was developed with two other web developers as a final project at BitMaker Labs.<br><br>
             <span class="red">Built on:</span> Ruby, Rails, HTML, CSS, JavaScript, JQuery, PostGres, Google Maps.
           </div>
@@ -231,66 +221,52 @@
           </ol>
           <div class="carousel-inner">
             <div class="item active" data-interval="1000">
-              <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap First" src="images/EDWIN AU - Portfolio -01 - Cover.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
               <img alt="Carousel Bootstrap Second" src="images/EDWIN AU - Portfolio - 02 - Mickey 100.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 03 - D&G.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Third" src="images/EDWIN AU - Portfolio - 04 - National.jpg", class="portfolio_images">
+              <img alt="Carousel Third" src="images/EDWIN AU - Portfolio - 04 - National.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 04 - Nobis Layout.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 04 - Nobis Layout.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 05 - Mred Womens.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 06 - Eviv.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 07 - Disney Product.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 07 - Disney Product.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 08 - Disney Alice.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 08 - Disney Alice.jpg" class="portfolio_images">
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 10 - Mred Mens.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 10 - Mred Mens.jpg" class="portfolio_images">
             </div>
-
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14- starwars.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14- starwars.jpg" class="portfolio_images">
               <div class="carousel-caption">
               </div>
             </div>
-
             <div class="item">
-              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - Clarkes-01.jpg", class="portfolio_images">
+              <img alt="Carousel Bootstrap Third" src="images/EDWIN AU - Portfolio - 14 - Clarkes-01.jpg" class="portfolio_images">
               <div class="carousel-caption">
               </div>
             </div>
-
-          </div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
-        </div>
+			  <div> <a class="left carousel-control" href="#carousel-768363" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control" href="#carousel-768363" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a></div>
       </div>
     <!-- </div class="row carousel"> -->
-  </div>
-
+  		</div>
+	  </div>
+	</div>
 </div>
-<!-- </div> -->
 
 <div style="
   background: red; /* For browsers that do not support gradients */
@@ -299,27 +275,26 @@
   background: -moz-linear-gradient(black, #33273d); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, #33273d); /* Standard syntax */
   width: 100vw; height: 105vh" class="container_one contactpage">
-  <img src="images/city_contact.png" class="img_contact" id="contactme">
+  <img src="images/city_contact.png" class="img_contact" id="contactme" alt="city">
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
     <div class="container_two contact">
       <div class="container_contacts">
-        <h4 class="email"><a href="mailto:edwinau@rogers.com?subject= Hello Edwin!" class="email">edwinau@rogers.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hello Edwin!" class="email">edwinaufcau@gmail.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="instagram"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
-  </body>
 </div>
 
-<div id='toTop'><a href="#backtotop" target="" title="Top"><i class="fa fa-angle-double-up"></i>top</a></div>
+<div id="toTop"><a href="#backtotop" target="" title="Top"><i class="fa fa-angle-double-up"></i>top</a></div>
 
 
 
 
 </body>
 
-  <script src='stylesheet/somejs.js'></script>
+  <script src="stylesheet/somejs.js"></script>
   <script src="stylesheet/bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
 
