--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
   <!-- <body background="images/marbleBlack.jpg" class="img_img"> -->
     <div class="container_two contact">
       <div class="container_contacts">
-        <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hello Edwin!" class="email">edwinaufcau@gmail.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hi Edwin" class="email">edwinfcau@gmail.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="instagram"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
