FriJun3 new mobile code dropped

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           </div>
           <div class="row nut">
             <div class="col-md-10 ipad displaynone">
-              <p class="hello" id="hello"> <br><br>Who I am & what I DO... </p><br>
+              <p class="hello"> <br><br>Who I am & what I DO... </p><br>
               <!-- <hr class="white_break"> -->
               <p class="i_believe">I believe websites should inspire people's lives. <br class="medialabtopnone">  <span class="italic">Are we on the same page?</span> </p>
 
@@ -282,7 +282,7 @@
         <h4 class="email"><a href="mailto:edwinfcau@gmail.com?subject= Hi Edwin" class="email">edwinfcau@gmail.com</a></h4><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="linkedin"><a href="http://www.linkedin.com/in/eaudesign" target="_blank"><i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
         <h4 class="facebook"><a href="http://www.facebook.com/eauwind" target="_blank"><i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
-        <h4 class="instagram"><a href="http://www.instagram.com" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
+        <h4 class="instagram"><a href="http://www.instagram.com/myster_edwin" target="_blank"><i class="fa fa-instagram fa-2x" aria-hidden="true"></i></a></h4><br class="imac displaynone"><br class="imac displaynone">
       </div>
     </div>
 </div>
