--- a/index.html
+++ b/index.html
@@ -89,59 +89,59 @@
 <div class="container_relative ipadcarou" id="quoteelon">
 
   <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotezero">
-    <p class="sixtysix">&#8220</p>
+    <p class="sixtysix">&#8220;</p>
     <div class="quote embossed container_two quotezero">Any product that needs a manual to work is broken.
       <div class="elon_musk embossed container_two">- Elon Musk -</div>
     </div>
-    <p class="ninetynine">&#8221</p>
+    <p class="ninetynine">&#8221;</p>
   </div>
 
 
   <div style="background-color: #131313; width: 100vw; height: 100vh" class="container_one quote_container quotenone">
-    <p class="sixtysix">&#8220</p>
+    <p class="sixtysix">&#8220;</p>
     <div class="quote embossed container_two quotenone">Any product that needs a manual to work is broken.
       <div class="elon_musk embossed container_two">- Elon Musk -</div>
     </div>
-    <p class="ninetynine">&#8221</p>
+    <p class="ninetynine">&#8221;</p>
   </div>
 
 
   <div style="background-color: #494E6B; width:100vw; height:100vh" class="container_one quote_container quoteone">
-        <p class="sixtysix">&#8220</p>
+        <p class="sixtysix">&#8220;</p>
     <div class="quote embossed container_two quoteone">Any product that needs a manual to work is broken.
       <div class="elon_musk embossed container_two">- Elon Musk -</div>
     </div>
-    <p class="ninetynine">&#8221</p>
+    <p class="ninetynine">&#8221;</p>
 
   </div>
 
   <div style="background-color: #123d00; width: 100vw; height: 100vh" class="container_one quote_container quotetwo">
-    <p class="sixtysix">&#8220</p>
+    <p class="sixtysix">&#8220;</p>
 
     <div class="quote embossed container_two quotetwo">Any product that needs a manual to work is broken.
       <div class="elon_musk embossed container_two">- Elon Musk -</div>
     </div>
-    <p class="ninetynine">&#8221</p>
+    <p class="ninetynine">&#8221;</p>
 
   </div>
 
   <div style="background-color: #80BD9E;  width: 100vw; height: 100vh" class="container_one quote_container quotethree">
-    <p class="sixtysix">&#8220</p>
+    <p class="sixtysix">&#8220;</p>
 
     <div class="quote embossed container_two quotethree">Any product that needs a manual to work is broken.
       <div class="elon_musk embossed container_two">- Elon Musk -</div>
     </div>
-    <p class="ninetynine">&#8221</p>
+    <p class="ninetynine">&#8221;</p>
 
   </div>
 
   <div style="background-color: #003B46; width: 100vw; height: 100vh" class="container_one quote_container quotefour">
-    <p class="sixtysix">&#8220</p>
+    <p class="sixtysix">&#8220;</p>
     <div class="quote embossed container_two quotefour">Any product that needs a manual to work is broken.
       <div class="elon_musk embossed container_two">- Elon Musk -</div>
 
     </div>
-    <p class="ninetynine">&#8221</p>
+    <p class="ninetynine">&#8221;</p>
   </div>
 
 </div>
