--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
     background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    width: 100vw; height: 100vh" class="container_one intro" id="backtotop">
+    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);" class="container_one intro" id="backtotop">
       <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
       <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
       <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
