--- a/index.html
+++ b/index.html
@@ -27,15 +27,13 @@
   <body>
 
 
-    <div style="background:
-    background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
+    <div class="container_one intro" style="background: -webkit-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -o-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
     background: -moz-linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);
-    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);" class="container_one intro" id="backtotop">
+    background: linear-gradient(-170deg,#001f72, #3a75bb, #94c5ff);"  id="backtotop">
       <img src="images/introcloud1.png" class="img_introcloud1" alt="cloud1">
       <img src="images/introcloud2.png" class="img_introcloud2" alt="cloud2">
       <img src="images/introcloud3.png" class="img_introcloud3" alt="cloud3">
-
 
       <!-- <img src="images/introcloud1.png" class="img_introcloud1"> -->
       <img src="images/intrograss.png" class="img_intrograss" id="intrograss" alt="grass">
@@ -44,7 +42,6 @@
   <!-- <body background="images/marbleWhite.jpg" class="img_img"> -->
       <div class="container_two">
         <h1 class="edwinname"><a href="http://www.linkedin.com/in/eaudesign" target="_blank">EDWIN<br class="imac displaynone"> AU</a></h1><br>
-        <hr size="5px" color="white" class="ipad displaynone">
         <div class="container_three">
           <h2 class="left button-row"><a href="#hello" target="" title="ABOUT ME"></a></h2>
           <h2 class="center button-row"><a href="#carousel" target="" title="PORTFOLIO"></a></h2>
@@ -57,8 +54,9 @@
     <div style="background: linear-gradient(27deg, #151515 5px, transparent 5px) 0 5px; linear-gradient(207deg, #151515 5px, transparent 5px) 10px 0px; linear-gradient(27deg, #222 5px, transparent 5px) 0px 10px; linear-gradient(207deg, #222 5px, transparent 5px) 10px 5px; linear-gradient(90deg, #1b1b1b 10px, transparent 10px); linear-gradient(#1d1d1d 25%, #1a1a1a 25%, #1a1a1a 50%, transparent 50%, transparent 75%, #242424 75%, #242424); background-color: #131313; background-size: 20px 20px; width: 100vw;" class="img_relative labtop" id="resume_pdf">
       <img src="images/plant.png" class="img_absolute img_plant" alt="plant">
       <img src="images/labtop.png" class="img_absolute img_labtop" alt="laptop">
-      <div class="container_nut">
-        <div class="container-fluid nut">
+    
+	<div class="container_nut">
+		<div class="container-fluid nut">
           <div class="imac displaynone">
             <p class="hello" id="hello">Who I am<br class="imac displaynone">& what I DO... </p><br>
             <!-- <hr class="white_break"> -->
